--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ mix-manifest.json
 dev/docker-data/
 src/themes/BaseV1/assets/css/main.css
 src/themes/BaseV1/assets/css/main.css.map
+.idea
+.phpunit.result.cache
+.php-cs-fixer.cache
+docker-data
