feat: atualiza nome feature request

--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -1,4 +1,4 @@
-name: Sugira uma nova funcionalidade ou melhoria para o mapas.
+name: Sugira uma nova funcionalidade ou melhoria para o mapas
 description: 'Você tem uma ideia ou sugestão e quer compartilhar?'
 labels: [Sugira um novo recurso ou melhoria]
 body:
