--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ src/themes/BaseV1/assets/css/main.css.map
 .phpunit.result.cache
 .php-cs-fixer.cache
 docker-data
+media-query.js.LICENSE.txt
+public/assets/
+src/.phpdoc
+.phpunit*
+.phpdocs*
+.env
