--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -14,17 +14,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Instala as dependências, cria configs e executa testes
-        run: cd src/ && npm install && npx cypress run --spec "cypress/e2e/**/*.js"
+        run: cd src/ && npm install && npx cypress run --spec "cypress/e2e/agentesPage/*.js"
 
       - name: Cypress Screenshots
         uses: actions/upload-artifact@v4
         if: failure()
         with:
             name: cypress-screenshots
-            path: cypress/screenshots
-            if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
-      - uses: actions/upload-artifact@v4
-        with:
-            name: cypress-videos
-            path: cypress/videos
-            if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+            path: src/cypress/screenshots
+            if-no-files-found: ignore
