--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Testing
 on:
   pull_request:
     branches:
-      - "main"
+      - "develop"
 
 jobs:
   phpunit:
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Add hosts to /etc/hosts
         run: |
@@ -32,6 +34,8 @@ jobs:
 
       - name: Run migrations
         run: |
+          pwd
+          ls -la
           php src/tools/apply-updates.php
         env:
           APP_MODE: development
