Adiciona arquivos privados em um volume externo

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -6,7 +6,8 @@ services:
       target: frankenphp_dev
     volumes:
       - ./api:/app
-      - /app/var
+      # - /app/var
+      - var-files:/app/var
       - ./api/frankenphp/Caddyfile:/etc/caddy/Caddyfile:ro
       - ./api/frankenphp/conf.d/app.dev.ini:/usr/local/etc/php/conf.d/app.dev.ini:ro
       # If you develop on Mac or Windows you can remove the vendor/ directory
