Diminui tempo do build e Atuliaza dependências

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -47,19 +47,11 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 RUN set -eux; \
 	install-php-extensions \
 	@composer \
-	apcu \
 	intl \
-	opcache \
+	pdo_pgsql \
 	zip \
 	gd \
 	;
-
-###> recipes ###
-###> doctrine/doctrine-bundle ###
-RUN set -eux; \
-	install-php-extensions pdo_pgsql
-###< doctrine/doctrine-bundle ###
-###< recipes ###
 
 COPY --link frankenphp/conf.d/app.ini $PHP_INI_DIR/conf.d/
 COPY --link --chmod=755 frankenphp/docker-entrypoint.sh /usr/local/bin/docker-entrypoint
