--- a/api/.env.sample
+++ b/api/.env.sample
@@ -8,18 +8,18 @@ MAILER_FROM=sysadmin@localhost
 MAILER_TRANSPORT=smtp://mailhog:1025
 MC_UPDATES_PROCESSES=1
 MERCURE_JWT_SECRET=!ChangeThisMercureHubJWTSecretKey!
-MERCURE_PUBLIC_URL=https://localhost/.well-known/mercure
+MERCURE_PUBLIC_URL=http://web/.well-known/mercure
 MERCURE_PUBLISHER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
 MERCURE_SUBSCRIBER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
-MERCURE_URL=http://php/.well-known/mercure
+MERCURE_URL=http://web/.well-known/mercure
 NUM_PROCESSES=1
 PENDING_PCACHE_RECREATION_INTERVAL=5
 POSTGRES_DB=mapas
 POSTGRES_PASSWORD=mapas
 POSTGRES_USER=mapas
 PWA_UPSTREAM=pwa:3000
-REDIS_CACHE=
+REDIS_CACHE=redis://redis:6379
 SERVER_NAME=http://
-SESSIONS_SAVE_PATH=
-TRUSTED_HOSTS=^${SERVER_NAME:-example\.com|localhost}|php$$
-TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+SESSIONS_SAVE_PATH=/var/sessions
+TRUSTED_HOSTS=^${SERVER_NAME:-example\.com|localhost} | php$$
+TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.17.0.0/12,192.168.0.0/16
