--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -66,7 +66,8 @@ CMD [ "frankenphp", "run", "--config", "/etc/caddy/Caddyfile" ]
 FROM frankenphp_base AS frankenphp_dev
 
 ENV APP_ENV=dev XDEBUG_MODE=off
-VOLUME /app/var/
+# VOLUME /app/var/
+COPY --link . /app
 
 RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
 
@@ -80,28 +81,28 @@ COPY --link frankenphp/conf.d/app.dev.ini $PHP_INI_DIR/conf.d/
 CMD [ "frankenphp", "run", "--config", "/etc/caddy/Caddyfile", "--watch" ]
 
 # Prod FrankenPHP image
-FROM frankenphp_base AS frankenphp_prod
+# FROM frankenphp_base AS frankenphp_prod
 
-ENV APP_ENV=prod
-ENV FRANKENPHP_CONFIG="import worker.Caddyfile"
+# ENV APP_ENV=prod
+# ENV FRANKENPHP_CONFIG="import worker.Caddyfile"
 
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+# RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
-COPY --link frankenphp/conf.d/app.prod.ini $PHP_INI_DIR/conf.d/
-COPY --link frankenphp/worker.Caddyfile /etc/caddy/worker.Caddyfile
+# COPY --link frankenphp/conf.d/app.prod.ini $PHP_INI_DIR/conf.d/
+# COPY --link frankenphp/worker.Caddyfile /etc/caddy/worker.Caddyfile
 
-# prevent the reinstallation of vendors at every changes in the source code
-COPY --link composer.* symfony.* ./
-RUN set -eux; \
-	composer install --no-cache --prefer-dist --no-dev --no-autoloader --no-scripts --no-progress
+# # prevent the reinstallation of vendors at every changes in the source code
+# COPY --link composer.* symfony.* ./
+# RUN set -eux; \
+# 	composer install --no-cache --prefer-dist --no-dev --no-autoloader --no-scripts --no-progress
 
-# copy sources
-COPY --link . ./
-RUN rm -Rf frankenphp/
+# # copy sources
+# COPY --link . ./
+# RUN rm -Rf frankenphp/
 
-RUN set -eux; \
-	mkdir -p var/cache var/log; \
-	composer dump-autoload --classmap-authoritative --no-dev; \
-	composer dump-env prod; \
-	composer run-script --no-dev post-install-cmd; \
-	chmod +x bin/console; sync;
+# RUN set -eux; \
+# 	mkdir -p var/cache var/log; \
+# 	composer dump-autoload --classmap-authoritative --no-dev; \
+# 	composer dump-env prod; \
+# 	composer run-script --no-dev post-install-cmd; \
+# 	chmod +x bin/console; sync;
