--- a/api/mapas/src/plugins/Metabase/package.json
+++ b/api/mapas/src/plugins/Metabase/package.json
@@ -10,6 +10,7 @@
 
   "devDependencies": {
     "@mapas/scripts": "workspace:0.0.0",
+    "@babel/plugin-syntax-dynamic-import": "*",
     "laravel-mix": "^5.0.4",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.2"
