--- a/api/mapas/src/package.json
+++ b/api/mapas/src/package.json
@@ -13,6 +13,9 @@
     "fast-glob": "^3.3.2",
     "laravel-mix": "^6.0.49",
     "postcss": "^8.4.38",
+    "@babel/plugin-transform-runtime": "*",
+    "@babel/plugin-proposal-object-rest-spread": "*",
+    "@babel/plugin-syntax-dynamic-import": "*",
     "@babel/preset-env": "*",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.77.2",
