--- a/api/frankenphp/conf.d/app.ini
+++ b/api/frankenphp/conf.d/app.ini
@@ -1,5 +1,5 @@
 expose_php = 0
-date.timezone = UTC
+date.timezone = America/Sao_Paulo
 apc.enable_cli = 1
 session.use_strict_mode = 1
 zend.detect_unicode = 0
@@ -11,3 +11,6 @@ opcache.interned_strings_buffer = 16
 opcache.max_accelerated_files = 20000
 opcache.memory_consumption = 256
 opcache.enable_file_override = 1
+post_max_size = 20M
+upload_max_filesize = 20M
+memory_limit = 128M
