--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,12 @@
     "keywords": ["php", "docker", "gis", "postgres"],
     "type": "project",
     "license": "AGPL",
-    "require-dev": {
-        "phpunit/phpunit": "^10.5",
-        "squizlabs/php_codesniffer": "3.*",
-        "vimeo/psalm": "^5.17",
-        "zircote/swagger-php": "^4.8"
-    },
     "require": {
         "php": "^7.3 || ^8",
+        "ext-intl": "*",
+        "ext-pdo_pgsql": "*",
+        "ext-zip": "*",
+        "ext-gd": "*",
         "acelaya/doctrine-enum-type": "^2.5",
         "akrabat/ip-address-middleware": "^2.1",
         "creof/doctrine2-spatial": "^1",
@@ -20,7 +18,6 @@
         "doctrine/dbal": "^3.6",
         "doctrine/orm": "2.16.*",
         "firebase/php-jwt": "^6.4",
-        "league/csv": "^9.6.2",
         "michelf/php-markdown": "1.*",
         "monolog/monolog": "^3.4",
         "mustache/mustache": "^2.11",
@@ -49,9 +46,7 @@
         "symfony/console": "^6.4.6",
         "symfony/serializer": "^7.0",
         "symfony/property-access": "^7.0",
-        "symfony/validator": "^7.0",
-        "symfony/console": "^6.4.6",
-        "league/csv": "^9.6.2"
+        "symfony/validator": "^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -81,5 +76,14 @@
             "type": "git",
             "url": "https://github.com/mapasculturais/opauth.git"
         }
-    ]
+    ],
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.51",
+        "phpunit/phpunit": "^10",
+        "symfony/http-client": "^7",
+        "doctrine/data-fixtures": "^1.7",
+        "squizlabs/php_codesniffer": "3.*",
+        "vimeo/psalm": "^5.17",
+        "zircote/swagger-php": "^4.8"
+    }
 }
