--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,21 @@
 {
+    "name": "mapasculturais/mapasculturais",
+    "version": "7.3.45",
+    "description": " Mapas Culturais é uma plataforma colaborativa que reúne informações sobre agentes, espaços, eventos e projetos culturais, fornecendo ao poder público uma radiografia da área de cultura e ao cidadão um mapa de espaços e eventos culturais da região",
+    "keywords": ["php", "docker", "gis", "postgres"],
+    "type": "project",
+    "license": "AGPL",
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*",
+        "vimeo/psalm": "^5.17",
+        "zircote/swagger-php": "^4.8",
+        "friendsofphp/php-cs-fixer": "^3.51",
+        "phpunit/phpunit": "^10",
+        "symfony/http-client": "^7",
+        "doctrine/data-fixtures": "^1.7"
+    },
     "require": {
-        "php": "^7.3 || ^8",
+        "php": "^8.2",
         "ext-intl": "*",
         "ext-pdo_pgsql": "*",
         "ext-zip": "*",
@@ -31,9 +46,16 @@
         "symfony/mailgun-mailer": "^6.3",
         "symfony/mime": "^6.3",
         "symfony/sendgrid-mailer": "^6.3",
+        "symfony/http-foundation": "^7.0",
+        "symfony/routing": "^7.0",
+        "symfony/serializer": "^7.0",
+        "symfony/property-access": "^7.0",
+        "symfony/validator": "^7.0",
+        "symfony/console": "^6.4.6",
         "league/csv": "^9.6.2",
         "phpoffice/phpspreadsheet": "^2.0",
         "curl/curl": "1.2.*"
+
     },
     "autoload": {
         "psr-4": {
