--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
     "dev": "pnpm run --parallel --recursive dev",
     "build": "pnpm run --parallel --recursive build",
     "watch": "pnpm run --parallel --recursive watch",
-    "cypress:open": "npx cypress open",
-    "cypress:run": "npx cypress run"
+    "postinstall": "sass src/themes/BaseV1/assets/css/sass/main.scss:src/themes/BaseV1/assets/css/main.css"
   },
   "devDependencies": {
+    "@mapas/scripts": "workspace:0.0.0",
+    "@babel/plugin-transform-runtime": "*",
+    "@babel/plugin-proposal-object-rest-spread": "*",
+    "@babel/plugin-syntax-dynamic-import": "*",
+    "@babel/preset-env": "*",
     "fast-glob": "^3.3.2",
     "laravel-mix": "^6.0.49",
-    "postcss": "^8.4.31",
-    "@babel/preset-env": "*",
+    "postcss": "^8.4.38",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.5",
     "sass-loader": "^12.6.0",
-    "webpack": "^5.91.0",
-    "cypress": "^13.14.0"
+    "webpack": "^5.91.0"
   }
 }
