adicionei titok nas redes sociais

--- a/public/docs/v1/components/responses/agent/archive.yaml
+++ b/public/docs/v1/components/responses/agent/archive.yaml
@@ -111,6 +111,9 @@ content:
           example: null
         pinterest:
           type: string
+          example: 
+        tiktok:
+          type: string
           example: null
         sentNotification:
           type: string
