--- a/public/docs/v2/components/schemas/project.yaml
+++ b/public/docs/v2/components/schemas/project.yaml
@@ -113,6 +113,10 @@ properties:
     type: string
     example: "pinterest"
     description: Pinterest do projeto
+  TikTok:
+    type: string
+    example: "tiktok"
+    description: TikTok do projeto
   emailPublico:
     type: string
     example: "email.publico@email.com"
