--- a/public/docs/v1/components/responses/agent/undelete.yaml
+++ b/public/docs/v1/components/responses/agent/undelete.yaml
@@ -112,6 +112,9 @@ content:
         pinterest:
           type: string
           example: null
+        tiktok:
+          type: string
+          example: null
         sentNotification:
           type: string
           example: null
