--- a/public/docs/v2/components/schemas/space.yaml
+++ b/public/docs/v2/components/schemas/space.yaml
@@ -157,6 +157,10 @@ properties:
     type: string
     example: null
     description: O Pinterest do espaço
+  tiktok:
+    type: string
+    example: null
+    description: O TikTok do espaço
   sentNotification:
     type: string
     example: null
